alignment fixes

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -33,5 +33,6 @@
 }
 
 .about-h{
+    margin-top: 50px;
     color: #34A853;
 }
