--- a/src/components/Events.css
+++ b/src/components/Events.css
@@ -1,24 +1,23 @@
 .section-title {
-  
   color: #4285F4;
 }
   
 .img-fluid {
-  /*max-width: 100%;*/
-  height: 25em;
-  padding:2em;
+  max-width: 25em;
+  height: auto;
+  padding: 2em;
 }
 .alink{
   text-decoration: none;
   background-color: #E6F4EA ;
 }
+
 .alink:hover{
-      text-decoration: underline #4285F4;
-      
+  text-decoration: underline #4285F4;  
 }
 
 .section{
-  font-size:larger;
+  font-size: medium;
   color:#7e7e7e;
   text-align: center;
   position: relative;
@@ -35,10 +34,15 @@
   box-shadow: 0 40px 60px -20px rgba(12, 5, 62, 0.15);
 }
 
-/*.events-card {
-  /*-ms-flex: 1 1 auto;
-  flex: 1 1 auto;*/
-  /*min-height: 1px;*/
-  /*padding: 3rem;*/
+/* .events-card {
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 3rem;
+} */
 
-
+@media screen and (max-width: 767px){
+  .section{
+    margin: 0;
+  }
+}
