--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,6 @@
 .home{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   height:100vh;
@@ -22,8 +22,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height:100vh;
-  width:50vw;
+  height: 100vh;
+  width: 50vw;
+}
+
+.homeleftimg{
+  max-height: 150px;
 }
 
 .homeright{
@@ -33,6 +37,8 @@
   align-items: center;
   height:100vh;
   width:50vw;
+  margin-left: -10%;
+  margin-right: 100px;
 }
 
 .homedown{
@@ -61,23 +67,27 @@ h1{
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
-  height: 30vh;
+  height: 25vh;
 }
 
 h1:hover{
-    background-position: 0 100%;
+  background-position: 0 100%;
 }
 
 .homeleft img{
- margin:10% ;
+  margin: 10%;
 }
 
 .homeright img{
-  height: 30%;
-  width: 50%;
+  height: 50%;
+  width: 80%;
 }
 
-@media screen and (max-width: 415px){
+@media screen and (max-width: 767px){
+  .home{
+    flex-direction: column;
+  }
+
   .homeup {
     flex-direction: column;
     height: 20vh;
@@ -90,6 +100,7 @@ h1:hover{
   .homedown{
     width: 100vw;
   }
+
   .homeup h1{
     font-size: 150%;
     margin: 0;
@@ -99,16 +110,23 @@ h1:hover{
   }
 
   .homeleft img{
-    height: 20%;
+    margin-top: 300px;
+    height: 12%;
 
   }
   .homeright img{
     width: 60vw;
+    margin: 0;
+    padding: 0;
+  }
+
+  .homeright{
+    margin: 0;
   }
 }
 
 h5{
-    color: #7e7e7e;
+  color: #7e7e7e;
 }
 .item{
   align-items: center;
